Name:                rump
Version:             0.1
Synopsis:            Rump rendez-vous server
Description:         Rump rendez-vous server
License:             GPL-3
Author:              Juha Paananen
Maintainer:          juha.paananen@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable rump
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    data-lens >= 2.0.1 && < 2.1,
    data-lens-template >= 2.1 && < 2.2,
    heist >= 0.6 && < 0.7,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    heist == 0.6.0.*,
    snap == 0.6.0.*,
    snap-core   == 0.6.0.*,
    snap-server == 0.6.0.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.4,
    xmlhtml == 0.1.*,
    json >= 0.5,
    curl >= 1.3.7,
    stm >= 2.2.0.1,
    Geodetic >= 0.4


  if flag(development)
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind

Test-Suite tests
  hs-source-dirs: src, test
  Type:           exitcode-stdio-1.0
  Main-is:        Specs.hs
  Build-depends:  base, HUnit >= 1.2.2.3, hspec >= 0.9.0, hxt-regex-xmlschema >= 9.0.1, HTTP >= 4000.2.1
  ghc-options:    -threaded
  default-language: Haskell2010


